 ! Minor change or bugfix. (don't bother to log typos except between releases.)
 * Change like above, but affects templates.
 & Change that affects a language file. (make two if it affects templates too.)
 + Feature addition or improvement.
 - Feature or option removal.
 % Development flag or note, such as branching.
 
Pretty URLs 1.1                                                20  September 2013
================================================================================  
 ! Fixed possible error in PrettyUrls-Filters.php
 
Pretty URLs 1.0                                                 19  February 2012
================================================================================  
 ! Do no cache javascript or mailto links saves some room in the database performance improvement.
 + New setting to use caching system instead of database tables thanks to nend.
 
Pretty URLs 1.0 RC5                                                 5  January 2011
================================================================================
 ! Base: Fixed issue if queryless urls are enabled. Pretty urls will now disable them when enabling pretty urls to fix server errors.

Pretty URLs 1.0 RC4                                                 12 December 2010
================================================================================
 ! Base: Fixed some install issues when Simple Portal mod is installed

Pretty URLs 1.0 RC3                                                  28 November 2010
================================================================================
 ! Base: Fixed bug with handling single quotes in board names.
 
Pretty URLs 1.0 RC2                                                  16 August 2010
================================================================================
 % Base/reverter: Installs on SMF 2.0 RC3.
 ! Base: The relativising code needed some fixes. Sadly <base> can't be used. (PrettyUrls-Filters.php, QueryString.php)